--- a/Notebooks/Harjoitus_Sklearn_1.ipynb
+++ b/Notebooks/Harjoitus_Sklearn_1.ipynb
@@ -269,7 +269,7 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # TODO: None"
    ],
    "metadata": {
