WIP: Improve notebooks

--- a/Notebooks/Harjoitus_Keras_2.ipynb
+++ b/Notebooks/Harjoitus_Keras_2.ipynb
@@ -23,8 +23,15 @@
     "## Tekstin luokittelua\n",
     "Tämä harjoitus on muokattu käyttäen [tutoriaalia](https://www.tensorflow.org/tutorials/keras/basic_text_classification)\n",
     "\n",
-    "Tällä kertaa aineistona käytetään [imdb](https://keras.io/datasets/#imdb-movie-reviews-sentiment-classification)-aineistoa, joka sisältää sanallisia arvosteluja numeroiksi muutettuna ja luokkana on joko positiivinen tai negatiivinen arvostelu.\n",
-    "\n"
+    "\n",
+    "\n",
+    "### Aineiston lataus\n",
+    "Tällä kertaa aineistona käytetään [imdb](https://keras.io/datasets/#imdb-movie-reviews-sentiment-classification)-aineistoa, \n",
+    "joka sisältää sanallisia arvosteluja numeroiksi muutettuna ja luokkana on joko positiivinen tai negatiivinen arvostelu.\n",
+    "\n",
+    "**Ongelma**: Voiko arvostelun sävyn (positiivinen/negatiivinen) päätellä arvostelun tekstistä?\n",
+    "\n",
+    "Ladataan arvostelut siten, että sanaston suuruus on 10000, eli arvostelut sisältävät 10000 useiten käytettyä sanaa."
    ]
   },
   {
@@ -37,6 +44,15 @@
     "imdb = keras.datasets.imdb\n",
     "(X_train, y_train), (X_test, y_test) = imdb.load_data(num_words=10000)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Tarkastele aluksi hieman aineistoa. "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -61,6 +77,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Kuten huomasitkin, arvostelu koostuukin sanojen sijaan numeroista. Imdb-aineisto sisältää kuitenkin sanaston,\n",
+    "jonka avulla on mahdollista nähdä mitä alkuperäinen arvostelu pitää sisällään."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -69,6 +95,23 @@
     "# Sanasto\n",
     "word_index = imdb.get_word_index()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Luodaan alle funktio, jonka avulla on mahdollisus kääntää arvostelu numeroista tekstiksi. \n",
+    "Ensimäiset 4 numeroa on varattu sanastossa erikoistilainteisiin. \n",
+    "* 0 on merkki, joka mallin tulee ignoroida\n",
+    "* 1 kuvaa arvostelun alkua\n",
+    "* 2 kuvaa tuntematonta sanaa\n",
+    "* 3 on varattu muille\n",
+    "\n",
+    "Koska aineisto sisältää nyt vain 10000 yleisintä sanaa, merkkiä 2 näkyy niiden sanojen kohdalla, jotka eivät ole \n",
+    "yleisimpien sanojen joukossa."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -107,22 +150,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2494\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "# maksimipituus\n",
-    "print(max([len(x) for x in X_train]))"
-   ]
+    "### Aineiston esikäsittelyä\n",
+    "Koska osa arvosteluista on eripituisia, ne on muutettava samanpituisiksi ennen luokittelua.\n",
+    "\n",
+    "Yksi tapa tehdä tämä on lisätä arvostelun alkuun tai loppuun niin monta ignoroitavaa merkkiä (`word_index[\"<PAD>\"]`,\n",
+    "eli 0), että kaikkien arvostelujen pituudet ovat samat. Mallille kerrotaan myöhemmin, että sitä \n",
+    "arvoa ei tule ottaa huomioon. \n",
+    "\n",
+    "Toinen vaihtoehto on jättää pisimpien arvostelujen viimeisiä sanoja pois ja rajata kaikkien arvosteluen pituus\n",
+    "lyhimmän mukaan.\n",
+    "\n",
+    "Nämä kaksi tapaa voi myös yhdistää. Silloin lyhimpien loppuun lisätään ignoroitavia merkkejä tiettyyn määrään asti,\n",
+    "ja niistä arvosteluista, jotka ylittävät tämän määrän, voidaan jättää ylimenevät merkit pois. Tähän tarkoitukseen \n",
+    "soveltuu mainiosti metodi [pad_sequences](https://keras.io/preprocessing/sequence/#pad_sequences) \n",
+    "\n",
+    "Muodosta uudet `X_train_padded` ja `X_test_padded` siten, että lisäät ignoroitavia merkkejä loppuun ja siten, että\n",
+    "maksimipituudeksi tulee 256."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -130,9 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pituudet eri, joten [](https://keras.io/preprocessing/sequence/#pad_sequences)\n",
-    "# Myös määrittää maksimipituuden\n",
-    "X_train = keras.preprocessing.sequence.pad_sequences(X_train,\n",
+    "X_train_padded = keras.preprocessing.sequence.pad_sequences(X_train,\n",
     "                                            value=word_index[\"<PAD>\"],\n",
     "                                            padding='post',\n",
     "                                            maxlen=256)"
@@ -144,48 +194,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = keras.preprocessing.sequence.pad_sequences(X_test,\n",
+    "X_test_padded = keras.preprocessing.sequence.pad_sequences(X_test,\n",
     "                                            value=word_index[\"<PAD>\"],\n",
     "                                            padding='post',\n",
-    "                                            maxlen=256)"
+    "                                            maxlen=256)\n",
+    "\n",
+    "print(X_train_padded[0])\n",
+    "print(translate(X_train_padded[0]))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   1   14   22   16   43  530  973 1622 1385   65  458 4468   66 3941\n",
-      "    4  173   36  256    5   25  100   43  838  112   50  670    2    9\n",
-      "   35  480  284    5  150    4  172  112  167    2  336  385   39    4\n",
-      "  172 4536 1111   17  546   38   13  447    4  192   50   16    6  147\n",
-      " 2025   19   14   22    4 1920 4613  469    4   22   71   87   12   16\n",
-      "   43  530   38   76   15   13 1247    4   22   17  515   17   12   16\n",
-      "  626   18    2    5   62  386   12    8  316    8  106    5    4 2223\n",
-      " 5244   16  480   66 3785   33    4  130   12   16   38  619    5   25\n",
-      "  124   51   36  135   48   25 1415   33    6   22   12  215   28   77\n",
-      "   52    5   14  407   16   82    2    8    4  107  117 5952   15  256\n",
-      "    4    2    7 3766    5  723   36   71   43  530  476   26  400  317\n",
-      "   46    7    4    2 1029   13  104   88    4  381   15  297   98   32\n",
-      " 2071   56   26  141    6  194 7486   18    4  226   22   21  134  476\n",
-      "   26  480    5  144   30 5535   18   51   36   28  224   92   25  104\n",
-      "    4  226   65   16   38 1334   88   12   16  283    5   16 4472  113\n",
-      "  103   32   15   16 5345   19  178   32    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0]\n",
-      "<START> this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert <UNKNOWN> is an amazing actor and now the same being director <UNKNOWN> father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for <UNKNOWN> and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also <UNKNOWN> to the two little boy's that played the <UNKNOWN> of norman and paul they were just brilliant children are often left out of the <UNKNOWN> list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "print(X_train[0])\n",
-    "print(translate(X_train[0]))"
-   ]
+    "## Mallin luominen\n",
+    "Jaa seuraavaksi opetusjoukko vielä erikseen opetus- ja validointijoukkouhin käyttäen \n",
+    "[`train_test_split`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)-metodia \n",
+    "siten, että opetusjoukon osuus on 80% ja validointijoukon osuus on 20% alkuperäisen opetusjoukon koosta. \n",
+    "\n",
+    "Validointijoukkoa käytetään tässä opetuksen aikaiseen seuraamiseen."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -194,8 +227,35 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
+    "X_train, X_val, y_train, y_val = train_test_split(X_train_padded, y_train, test_size=0.2, random_state=42)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Luo ja kokoa malli `create_model`-funktion avulla. Käytä ensimmäisen harjoituksen tapaan [Sequential](https://keras.io/getting-started/sequential-model-guide/)\n",
+    "-luokkaa.\n",
+    "\n",
+    "Luo neuronitasot seuraavasti:\n",
+    "1. Ensimmäinen taso on [Embedding](https://keras.io/layers/embeddings/#embedding), jonka avulla on mahdollista luoda\n",
+    "   sulautettu moniulotteinen Dense-taso sanaston koon perusteella. Anna `input_dim` arvoksi sanaston koko ja `output_dim` \n",
+    "   arvoksi haluamasi Dense-tason koko (esimerkiksi 16).\n",
+    "2. Toinen taso on [GlobalAveragePooling1D](https://keras.io/layers/pooling/#globalaveragepooling1d), joka \n",
+    "3. Kolmanneksi tasoksi aseta [Dense](https://keras.io/layers/core/#Dense) ja sen kooksi haluamasi koko. \n",
+    "   Aseta sen aktivointifunktioksi \"relu\"\n",
+    "4. Voit asettaa lisää Dense-tasoja halutessasi \n",
+    "5. Viimeiseksi tasoksi aseta [Dense](https://keras.io/layers/core/#Dense). Koska luokkia on vain kaksi, voidaan 'softmax'-\n",
+    "   aktivointifunktion sijaan käyttää 'sigmoid'-funktiota, joka palauttaa (todennäköisyysarvoksikin tulkittavan) luvun\n",
+    "    0-1 väliltä. Tällöin tason kooksi asetetaan 1.\n",
+    "\n",
+    "Mallin kokoamiseksi käytä optimointifunktiona 'adam'-funktiota ja häviöfunktiona 'binary_crossentropy'-funktiota, \n",
+    "sillä kyseessä on kahden luokan luokitteluongelma ja viimeinen taso antaa todennäköisyysarvon. \n",
+    "\n",
+    "Käytä `\"accuracy\"`-metriikka opetuksen seuraamiseksi."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -217,6 +277,17 @@
     "              metrics=['acc'])\n",
     "    return model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Opetaaminen\n",
+    "Opeta nyt luomasi malli käyttäen `validation_data`-parametrina validointijoukkoa `(X_val, y_val)`. Aseta `batch_size`-\n",
+    "ja `epoch`-parametrit haluamiksesi."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -263,9 +334,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluoiminen\n",
+    "Evaluoi nyt luomasi malli käyttäen 1000 ensimmäistä testijoukon havaintoa."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -284,25 +369,11 @@
     }
    ],
    "source": [
-    "# evaluate\n",
     "evaluation = model.evaluate(X_test[:1000], y_test[:1000], batch_size=100)\n",
-    "print(evaluation)"
+    "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Regressio\n",
-    "Ehkä [tämä](https://www.tensorflow.org/tutorials/keras/basic_regression) tutoriaali?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -322,6 +393,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
