--- a/Notebooks/Harjoitus_Sklearn_2.ipynb
+++ b/Notebooks/Harjoitus_Sklearn_2.ipynb
@@ -12,115 +12,12 @@
     "======================\n",
     "\n",
     "Tämän harjoituksen tarkoitus on opettaa hieman edistyksellisimpiä toimintoja.\n",
+    "\n",
+    "Asentaaksesi tarvittavat paketit omalla koneellasi harjoituksen suorittamista varten:\n",
+    "```\n",
+    "$ pip3 install scikit-learn pandas imbalanced-learn matplotlib==2.2.2\n",
+    "```\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Regressio\n",
-    "Regressio-ongelma:\n",
-    "\n",
-    "TODO: selitys\n",
-    "\n",
-    "Kokeile ainakin [näistä](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.linear_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Datan koko:  20640\n",
-      ".. _california_housing_dataset:\n",
-      "\n",
-      "California Housing dataset\n",
-      "--------------------------\n",
-      "\n",
-      "**Data Set Characteristics:**\n",
-      "\n",
-      "    :Number of Instances: 20640\n",
-      "\n",
-      "    :Number of Attributes: 8 numeric, predictive attributes and the target\n",
-      "\n",
-      "    :Attribute Information:\n",
-      "        - MedInc        median income in block\n",
-      "        - HouseAge      median house age in block\n",
-      "        - AveRooms      average number of rooms\n",
-      "        - AveBedrms     average number of bedrooms\n",
-      "        - Population    block population\n",
-      "        - AveOccup      average house occupancy\n",
-      "        - Latitude      house block latitude\n",
-      "        - Longitude     house block longitude\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "\n",
-      "This dataset was obtained from the StatLib repository.\n",
-      "http://lib.stat.cmu.edu/datasets/\n",
-      "\n",
-      "The target variable is the median house value for California districts.\n",
-      "\n",
-      "This dataset was derived from the 1990 U.S. census, using one row per census\n",
-      "block group. A block group is the smallest geographical unit for which the U.S.\n",
-      "Census Bureau publishes sample data (a block group typically has a population\n",
-      "of 600 to 3,000 people).\n",
-      "\n",
-      "It can be downloaded/loaded using the\n",
-      ":func:`sklearn.datasets.fetch_california_housing` function.\n",
-      "\n",
-      ".. topic:: References\n",
-      "\n",
-      "    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\n",
-      "      Statistics and Probability Letters, 33 (1997) 291-297\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn import datasets, linear_model\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "data = datasets.fetch_california_housing()\n",
-    "X = data.data\n",
-    "y = data.target\n",
-    "print(\"Datan koko: \", len(y))\n",
-    "print(data.DESCR)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # TODO: None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients: \n",
-      " [ 1.48196324e-01  5.72821070e-03  0.00000000e+00 -0.00000000e+00\n",
-      " -8.16437293e-06 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00]\n",
-      "Mean squared error: 0.94\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LinearRegression, Lasso\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "\n",
-    "regr = Lasso()#SGDRegressor()# LinearRegression()\n",
-    "regr.fit(X_train, y_train)\n",
-    "y_pred = regr.predict(X_test)\n",
-    "\n",
-    "print('Coefficients: \\n', regr.coef_)\n",
-    "print(\"Mean squared error: {:.2f}\".format(mean_squared_error(y_test, y_pred)))"
    ]
   },
   {
@@ -254,16 +151,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
-    "# Opeta malli ja luo ennustukset"
+    "## Esikäsittely\n",
+    "Suorita standardointi."
    ]
   },
   {
@@ -294,11 +190,36 @@
     "Jos luokkien määrä havaintojen välillä on epätasapainossa, malli suosii helposti luokkia, joissa on enemmän havaintoja, kuin toisissa. Tämä on yksi koneoppimisen suurista ongelmista. Yksi keino hallita ongelmaa, on havaintojen resamplaus, eli havaintojen määrän muuttaminen opetusjoukossa siten, että luokkien välinen epätasapaino pienenisi.\n",
     "\n",
     "Tähän on kaksi menetelmää: \n",
-    "* Havaintojen lisääminen pienimpiin luokkiin\n",
-    "* Havaintojen poistaminen suurimmista luokista\n",
+    "* Oversample: Havaintojen lisääminen pienimpiin luokkiin\n",
+    "* Undersample: Havaintojen poistaminen suurimmista luokista\n",
     "\n",
     "\n",
-    "TODO: lisää tekstiä!"
+    "Molempiin menetelmiin on monta algoritmiä mainiossa [Imbalanced-learn](https://imbalanced-learn.readthedocs.io/en/stable/index.html)-kirjastossa.\n",
+    "\n",
+    "Luodaan aluksi epätasapainoinen opetusaineisto alkuperäisestä opetusaineistosta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.datasets import make_imbalance\n",
+    "from collections import Counter, OrderedDict\n",
+    "\n",
+    "sampling_strategy = {0: 50, 1: 154, 2: 144, 3: 70, 4: 135, 5: 135, 6: 80, 7: 145, 8: 144, 9: 60}\n",
+    "X_train_imb, y_train_imb =  make_imbalance(X_train, y_train, sampling_strategy=sampling_strategy)\n",
+    "\n",
+    "print(\"Alkuperäinen jakauma\", dict(OrderedDict(sorted(Counter(y_train).items(), key=lambda t: t[0]))))\n",
+    "print(\"Epätasapainoinen jakauma\", dict(OrderedDict(sorted(Counter(y_train_imb).items(), key=lambda t: t[0]))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suorita yksinkertainen luokittelu molemmilla aineistoilla haluamallasi luokittelualgoritmilla."
    ]
   },
   {
@@ -346,22 +267,21 @@
     }
    ],
    "source": [
-    "from imblearn.datasets import make_imbalance\n",
-    "from collections import Counter, OrderedDict\n",
-    "\n",
-    "sampling_strategy = {0: 50, 1: 154, 2: 144, 3: 70, 4: 135, 5: 135, 6: 80, 7: 145, 8: 144, 9: 60}\n",
-    "X_train2, y_train2 =  make_imbalance(X_train, y_train, sampling_strategy=sampling_strategy)\n",
-    "\n",
-    "print(dict(OrderedDict(sorted(Counter(y_train).items(), key=lambda t: t[0]))))\n",
-    "print(dict(OrderedDict(sorted(Counter(y_train2).items(), key=lambda t: t[0]))))\n",
-    "\n",
     "from sklearn.svm import SVC\n",
     "clf = SVC()\n",
+    "\n",
     "clf.fit(X_train, y_train)\n",
     "print(\"Alkuperäinen OA: {:.2f}\".format(clf.score(X_test, y_test)))\n",
     "\n",
-    "clf.fit(X_train2, y_train2)\n",
+    "clf.fit(X_train_imb, y_train_imb)\n",
     "print(\"Epätasapainoisen OA: {:.2f}\".format(clf.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Epätasapainon korjaamiseksi kokeillaan nyt molempia resample-menetelmiä. Käytä yksinkertaisia satunnaisuuteen perustuvia [RandomOverSampler](https://imbalanced-learn.readthedocs.io/en/stable/generated/imblearn.over_sampling.RandomOverSampler.html#imblearn.over_sampling.RandomOverSampler)- ja [RandomUnderSampler](https://imbalanced-learn.readthedocs.io/en/stable/generated/imblearn.under_sampling.RandomUnderSampler.html#imblearn.under_sampling.RandomUnderSampler)-luokkia."
    ]
   },
   {
@@ -414,14 +334,15 @@
     "\n",
     "\n",
     "ros = RandomOverSampler()\n",
-    "X_train_oversampled, y_train_oversampled = ros.fit_resample(X_train2, y_train2)\n",
+    "X_train_oversampled, y_train_oversampled = ros.fit_resample(X_train_imb, y_train_imb)\n",
     "rus = RandomUnderSampler()\n",
-    "X_train_undersampled, y_train_underrsampled = rus.fit_resample(X_train2, y_train2)\n",
+    "X_train_undersampled, y_train_underrsampled = rus.fit_resample(X_train_imb, y_train_imb)\n",
     "\n",
-    "print(dict(OrderedDict(sorted(Counter(y_train_oversampled).items(), key=lambda t: t[0]))))\n",
-    "print(dict(OrderedDict(sorted(Counter(y_train_underrsampled).items(), key=lambda t: t[0]))))\n",
+    "print(\"Jakauma oversamplen jälkeen\", \n",
+    "      dict(OrderedDict(sorted(Counter(y_train_oversampled).items(), key=lambda t: t[0]))))\n",
+    "print(\"Jakauma undersamplen jälkeen\",\n",
+    "      dict(OrderedDict(sorted(Counter(y_train_underrsampled).items(), key=lambda t: t[0]))))\n",
     "\n",
-    "clf = SVC()\n",
     "clf.fit(X_train_oversampled, y_train_oversampled)\n",
     "print(\"Oversampled OA: {:.2f}\".format(clf.score(X_test, y_test)))\n",
     "\n",
@@ -597,10 +518,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
