--- a/Notebooks/Harjoitus_Spark_1.ipynb
+++ b/Notebooks/Harjoitus_Spark_1.ipynb
@@ -23,11 +23,28 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Motivointia\n",
-    "\n"
+    "## Motivointia"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import pyspark\n",
+    "from pyspark import SparkContext\n",
+    "sc =SparkContext()\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
    }
   },
   {
