--- a/Notebooks/Harjoitus_TF_1.ipynb
+++ b/Notebooks/Harjoitus_TF_1.ipynb
@@ -25,8 +25,16 @@
    "cell_type": "markdown",
    "source": [
     "## Motivointia\n",
-    "\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## blääbläblää"
    ],
    "metadata": {
     "collapsed": false
