Set correct paths and fix minor typos

--- a/Notebooks/Harjoitus_Sklearn_1.ipynb
+++ b/Notebooks/Harjoitus_Sklearn_1.ipynb
@@ -483,17 +483,24 @@
     "# Tallennus\n",
     "dump(clf, 'sklearn_harj1.joblib')\n",
     "# Lataus\n",
-    "clf = load('sklearn_harj1.joblib')\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "clf = load('sklearn_harj1.joblib')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Testaaminen\n",
     "Opettamisen jälkeen luonnollinen seuraava vaihe on mallin testaaminen.\n",
     " \n",
     "### Ennusteiden luominen\n",
     "Mallia voidaan nyt käyttää ennusteiden luomiseen. Luo ennustetut arvot testausjoukolle `X_test`."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -787,7 +794,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Hyperparametrioptimointia voi tehdä myös rinnakkain asettamalla parametrin `n_jobs`. Tämä onkin aina hyödyllistä asettaa,\n",
     "jos laskentakoneen tehot riittäisivät (jos eivät riitä, ehkä fiksua olisi suorittaa laskentaa toisella koneella).\n",
@@ -798,15 +809,6 @@
     "[scikit-optimize](https://scikit-optimize.github.io/notebooks/sklearn-gridsearchcv-replacement.html).\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": []
   }
  ],
  "metadata": {
@@ -830,10 +832,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
