--- a/Notebooks/Harjoitus_pellot.ipynb
+++ b/Notebooks/Harjoitus_pellot.ipynb
@@ -12,7 +12,7 @@
     "**Ongelma**: Voiko kasviryhmän tunnistaa kasvulohkojen metatiedoista?\n",
     "\n",
     "## Data lataus\n",
-    "Lataa Pandas DataFrame-olioina aineistot \"../peltolohkot.csv\" ja \"../kasvikoodit.csv\".\n",
+    "Lataa Pandas DataFrame-olioina aineistot \"../../ml-datasets/peltolohkot.csv\" ja \"../../ml-datasets/kasvikoodit.csv\".\n",
     "\n",
     "Lataa vain 10% [otos](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sample.html) koko datasta"
    ]
@@ -27,8 +27,8 @@
     "from IPython.display import display, HTML\n",
     "\n",
     "\n",
-    "parcels = pd.read_csv(\"../peltolohkot.csv\", index_col=False).sample(frac=0.1)\n",
-    "codes = pd.read_csv(\"../kasvikoodit.csv\", index_col=\"code\")\n",
+    "parcels = pd.read_csv(\"../../ml-datasets/peltolohkot.csv\", index_col=False).sample(frac=0.1)\n",
+    "codes = pd.read_csv(\"../../ml-datasets/kasvikoodit.csv\", index_col=\"code\")\n",
     "\n",
     "print(\"Lohkodata – koko: \", len(parcels))\n",
     "display(parcels.head(3))\n",
@@ -383,6 +383,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
