--- a/Notebooks/Harjoitus_viinit.ipynb
+++ b/Notebooks/Harjoitus_viinit.ipynb
@@ -31,8 +31,8 @@
     "    wine['label'] = label \n",
     "    return wine\n",
     "    \n",
-    "red = process_data(\"../winequality-red.csv\", 0)\n",
-    "white = process_data(\"../winequality-white.csv\", 1)\n",
+    "red = process_data(\"../../ml-datasets/winequality-red.csv\", 0)\n",
+    "white = process_data(\".../../ml-datasets/winequality-white.csv\", 1)\n",
     "\n",
     "wine = pd.concat([red, white])\n",
     "# Sample sekoittaa aineiston, frac=1 tarkoittaa palauttaa koko aineiston\n",
@@ -315,10 +315,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
